nginx-rewrite.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /solana
  name: rewrite
  namespace: neon-proxy
spec:
  ingressClassName: nginx
  rules:
  - host: 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: proxy-svc
            port: 
              number: 9090
